fixed nav spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -200,7 +200,7 @@ header {
 .logo {
     background-color: var(--body-pink);
     height: 1.8em;
-    margin-left: 1.2em;
+    margin-left: 2.5em;
     opacity: 0;
     width: 1.8em;
 }
@@ -219,20 +219,24 @@ nav {
     transition: opacity 150ms ease-in-out;
 }
 
-#book a {
+.nav-link:hover {
+    opacity: 0.6;
+}
+
+.book {
     background-color: var(--mid-accent);
     border: 2px solid var(--btn-accent);
     border-radius: 50px;
     color: var(--btn-bg);
-    font-weight: 500;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
     padding: .5em 1em;
     text-decoration: none;
 }
 
-#book a:hover {
+.book:hover {
     background-color: var(--btn-bg);
     color: var(--mid-accent);
-    font-weight: 600;
 }
 
 header h1 {
@@ -326,18 +330,18 @@ footer a {
     }
 }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 45em) {
     .nav-toggle-label {
         display: none;
     }
 
     .navbar {
         display: grid;
-        grid-template-columns: 1fr auto minmax(600px, 10fr) 1fr;
+        grid-template-columns: 1fr auto minmax(640px, 14fr) 1fr;
     }
 
     .logo {
-        grid-column: 2 / span 1;
+        grid-column: 1 / span 1;
         opacity: 1;
     }
 
@@ -352,7 +356,7 @@ footer a {
 
     nav ul {
         display: flex;
-        justify-content: flex-end;;
+        justify-content: flex-end;
     }
 
     .nav-link {
